--- a/config/uat.env
+++ b/config/uat.env
@@ -1,2 +1,4 @@
 PORT=3000
 DB_URL="mongodb+srv://ka_ravisankar:Qwaszxopklnm06@cluster0.akmryci.mongodb.net/Hospital-API"
+JWT_SECRET=hULShXswVlJ6h8RvEmhZiSrh0b8I99NN
+JWT_EXPIRE=1d
