--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "nodemailer": "^6.9.10"
+    "nodemailer": "^6.9.10",
+    "swagger-ui-express": "^5.0.0"
   }
 }
